// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-chevron-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-chevron-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`jump.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-chevron-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-chevron-right t-size-m"
      />
    </div>
    <div
      class="t-pagination__jump"
    >
      跳转
      <div
        class="t-input"
      >
        <input
          class="t-input__inner"
        />
      </div>
      页
    </div>
  </div>
</DocumentFragment>
`;

exports[`mini.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-chevron-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-chevron-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`more.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-chevron-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        20
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-chevron-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`pageNum.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__select"
    >
      <div>
        <div
          class="t-select"
          style="user-select: none;"
        >
          <span
            class="t-select-placeholder"
            style="color: rgb(0, 0, 0);"
          >
            20条/页
          </span>
          <svg
            class="t-icon t-select-right-icon"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-chevron-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        33
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-chevron-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`simple.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-chevron-left t-size-m"
      />
    </div>
    <div
      class="t-pagination__select"
    >
      <div>
        <div
          class="t-select"
          style="user-select: none;"
        >
          <span
            class="t-select-placeholder"
            style="color: rgb(0, 0, 0);"
          >
            1/20
          </span>
          <svg
            class="t-icon t-select-right-icon"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-chevron-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`simpleMini.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination t-size-s"
  >
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-chevron-left t-size-m"
      />
    </div>
    <div
      class="t-pagination__select"
    >
      <div>
        <div
          class="t-select t-size-s"
          style="user-select: none;"
        >
          <span
            class="t-select-placeholder"
            style="color: rgb(0, 0, 0);"
          >
            1/20
          </span>
          <svg
            class="t-icon t-select-right-icon"
            version="1.1"
            viewBox="0 0 1024 1024"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M514.72285696 704.7972396800001L520.12398592 703.85630784C525.44129472 702.4731296 530.472656 699.70458368 534.64508928 695.5504467200001L534.64508928 695.5504467200001 910.3632832 320.41891840000005 865.108448 275.16408320000005 512.02827328 627.72684352 160.0351072 275.20768640000006 114.78027328 320.46252160000006 489.38601344 695.5130879999999C496.31708544 702.46731264 505.65104192 705.56179008 514.72285696 704.7972396800001Z"
              fill-opacity=".9"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-chevron-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`total.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-pagination"
  >
    <div
      class="t-pagination__total"
    >
      共 685 项数据
    </div>
    <div
      class="t-pagination__btn t-pagination__btn--prev t-is-disabled"
    >
      <i
        class="t-icon t-icon-chevron-left t-size-m"
      />
    </div>
    <ul
      class="t-pagination__pager"
    >
      <li
        class="t-pagination__number t-is-current"
      >
        1
      </li>
      <li
        class="t-pagination__number"
      >
        2
      </li>
      <li
        class="t-pagination__number"
      >
        3
      </li>
      <li
        class="t-pagination__number"
      >
        4
      </li>
      <li
        class="t-pagination__number"
      >
        5
      </li>
      <li
        class="t-pagination__number t-pagination__number--more"
      >
        <i
          class="t-icon t-icon-more t-size-m"
        />
      </li>
      <li
        class="t-pagination__number"
      >
        46
      </li>
    </ul>
    <div
      class="t-pagination__btn t-pagination__btn--next"
    >
      <i
        class="t-icon t-icon-chevron-right t-size-m"
      />
    </div>
  </div>
</DocumentFragment>
`;
